--- a/maket.html
+++ b/maket.html
@@ -4,7 +4,7 @@
     <title>maket</title>
     <link rel="stylesheet" href="css/main.css">
 </html>
-<body>
+ <body>
     <header>
         <div class="container">
             <div class="header">
@@ -53,23 +53,19 @@
                 <div class="info__merit">
                     <h3 class="info__merit_logo pseudo">О заслугах</h3>
                     <div class="wrapper">
-                        <div class="item">
-                            <img class="img" src="img/bug.png">
+                        <div class="item__first">
                             <h5>Волшебный жук</h5>
                             <p class="item__text">Позволяет быть в тонусе</p>
                         </div>
-                        <div class="item">
-                            <img class="img" src="img/bell.png">
+                        <div class="item__second">
                             <h5>Особый колокольчик</h5>
                             <p class="item__text">Позволяет не проспать</p>
                         </div>
-                        <div class="item">
-                            <img class="img storm" src="img/storm.png">
+                        <div class="item__third">
                             <h5>Человек-молния</h5>
                             <p class="item__text">Я сдаю все проекты раньше</p>
                         </div>
-                        <div class="item">
-                            <img class="img" src="img/camera.png">
+                        <div class="item__fourth">
                             <h5>Фотографирую</h5>
                             <p class="item__text">Просто мне это нравится</p>
                         </div>
@@ -80,7 +76,7 @@
     </section>
     <section id="appeal">
         <div class="container">
-            <h2> Почему ко мне обращаются</h2>
+            <h2 class="main__logo"> Почему ко мне обращаются</h2>
             <div class="main__menu">
                 <div class="main">
                     <div class="main__info">
