fix: мелкие правки по css

--- a/maket.html
+++ b/maket.html
@@ -53,19 +53,31 @@
                 <div class="info__merit">
                     <h3 class="info__merit_logo pseudo">О заслугах</h3>
                     <div class="wrapper">
-                        <div class="item__first">
+                        <div class="item item__first">
+                            <div class="icon">
+                                <img src="./img/bug.png" alt="">
+                            </div>
                             <h5>Волшебный жук</h5>
                             <p class="item__text">Позволяет быть в тонусе</p>
                         </div>
-                        <div class="item__second">
+                        <div class="item item__second">
+                            <div class="icon">
+                                <img src="./img/bell.png" alt="">
+                            </div>
                             <h5>Особый колокольчик</h5>
                             <p class="item__text">Позволяет не проспать</p>
                         </div>
-                        <div class="item__third">
+                        <div class="item item__third">
+                            <div class="icon">
+                                <img src="./img/storm.png" alt="">
+                            </div>
                             <h5>Человек-молния</h5>
                             <p class="item__text">Я сдаю все проекты раньше</p>
                         </div>
-                        <div class="item__fourth">
+                        <div class="item item__fourth">
+                            <div class="icon">
+                                <img src="./img/camera.png" alt="">
+                            </div>
                             <h5>Фотографирую</h5>
                             <p class="item__text">Просто мне это нравится</p>
                         </div>
