--- a/maket.html
+++ b/maket.html
@@ -15,11 +15,11 @@
                     Я ЗАНИМАЮСЬ ВЕРСТКОЙ И ДЕЛАЮ ЭТО
                     ПРОФЕССИОНАЛЬНО
                 </div>
-                <a href="#">
-                    <div class="header__button">
+                <div class="menu__button ">
+                    <a  class="menu_button_link" href="#">
                         СВЯЗАТЬСЯ СО МНОЙ
-                    </div>
-                </a>
+                    </a>
+                </div>
                 <div class="header__img">
                     <a href="#">
                         <img src="img/arrow.png">
@@ -123,11 +123,11 @@
                     Вам просто необходимо связаться со мной, иначе вы
                     <br> рискуете упустить знакомство с лучшим человеком на земле
                 </p>
-                <a href="#">
                     <div class="menu__button ">
-                        СВЯЗАТЬСЯ СО МНОЙ
+                        <a class="menu_button_link" href="#">
+                            СВЯЗАТЬСЯ СО МНОЙ
+                        </a>
                     </div>
-                </a>
 
             </div>
         </div>
@@ -141,9 +141,9 @@
             <div class="footer__second">
                 Мое имя и фамилия
             </div>
-            <div class="footer__third pseudo__first">
+            <a class="footer__third pseudo__first" href="#">
                 Политика конфиденциальности
-            </div>
+            </a>
         </div>
     </div>
 </footer>
